--- a/init.org
+++ b/init.org
@@ -116,6 +116,7 @@ repositories. We first list these packages:
                        org
                        org-bullets
                        powerline
+                       rubik
                        smex
                        sql-indent
                        sqlup-mode
