--- a/README.org
+++ b/README.org
@@ -442,15 +442,17 @@ In Dired (see mark [[https://www.gnu.org/software/emacs/manual/html_node/emacs/M
 
 ** LaTeX
 
-| Key name         | Operation                                            |
-|------------------+------------------------------------------------------|
-| ~C-c C-l~        | Shows compilation logs in LaTeX                      |
-| ~C-c C-v~        | Calls viewer with forward search from LaTeX document |
-| ~C-<left click>~ | Inverse search in PDF document                       |
-| ~C-c =~          | Displays a dynamic table of contents                 |
-| ~C-c (~          | RefTeX inserts label                                 |
-| ~C-c )~          | RefTeX references label                              |
-| ~C-c [~          | RefTeX inserts citation (from BibTeX)                |
+| Key name         | Operation                                             |
+|------------------+-------------------------------------------------------|
+| ~C-c C-l~        | Shows compilation logs in LaTeX                       |
+| ~C-c C-v~        | Calls viewer with forward search from LaTeX document  |
+| ~C-<left click>~ | Inverse search in PDF document                        |
+| ~C-c =~          | Displays a dynamic table of contents                  |
+| ~C-c (~          | RefTeX inserts label                                  |
+| ~C-c )~          | RefTeX references label                               |
+| ~C-c [~          | RefTeX inserts citation (from BibTeX)                 |
+|------------------+-------------------------------------------------------|
+| ~C-c b~          | Launch `ivy-bibtex` (do not need to be in LaTeX mode) |
 
 
 ** ESS
