--- a/init.org
+++ b/init.org
@@ -586,9 +586,11 @@ Simple customization:
    ivy-use-selectable-prompt t
    ;; Use fuzzy matching without space between letters, except for
    ;; Swiper (search)
-   ivy-re-builders-alist
-   '((swiper . ivy--regex-plus)
-     (t      . ivy--regex-fuzzy))
+   ivy-re-builders-alist '(
+     ;; (swiper . ivy--regex-plus)
+                           (counsel-M-x . ivy--regex-fuzzy)
+                           (read-file-name-internal . ivy--regex-fuzzy)
+                           (t . ivy--regex-plus))
    ivy-initial-inputs-alist nil)
 #+END_SRC
 
@@ -621,6 +623,8 @@ window):
 
 #+BEGIN_SRC emacs-lisp
   (setq counsel-find-file-at-point t)
+  (global-set-key (kbd "M-x") 'counsel-M-x)
+  (global-set-key (kbd "C-x C-f") 'counsel-find-file)
   (global-set-key (kbd "C-x C-o") 'find-file-other-window)
   ;; (global-set-key (kbd "<f1> f") 'counsel-describe-function)
   ;; (global-set-key (kbd "<f1> v") 'counsel-describe-variable)
